--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,6 +51,7 @@ body {
   border: none;
   padding: 1rem 1.25rem;
   background-color: #d1d1d1;
+  outline: none;
   color: black;
   cursor: pointer;
   -webkit-transition: background-color 0.1s linear;
