--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -53,6 +53,7 @@ body {
 	border: none;
 	padding: 1rem 1.25rem;
 	background-color: #d1d1d1;
+	outline: none;
 	color: black;
 	cursor: pointer;
 	transition: background-color 0.1s linear;
