--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,7 +46,7 @@ body {
 .calculator-buttons {
   display: -ms-grid;
   display: grid;
-      grid-template-areas: 'plus minus times divide' 'seven eight nine equal' 'four five six equal' 'one two three equal' 'zero clear clear equal';
+      grid-template-areas: 'plus minus times divide' 'seven eight nine equals' 'four five six equals' 'one two three equals' 'zero clear clear equals';
 }
 
 .button {
@@ -60,30 +60,30 @@ body {
 }
 
 .button:hover {
-  background-color: #e4e4e4;
+  background-color: #e9e9e9;
 }
 
 .button:active {
-  background-color: #c5c5c5;
+  background-color: #cacaca;
 }
 
 .button:focus {
   border: 2px solid #232327;
 }
 
-.equal {
+.equals {
   -ms-grid-row: 2;
   -ms-grid-row-span: 4;
   -ms-grid-column: 4;
-  grid-area: equal;
+  grid-area: equals;
   background-color: #ffab10;
 }
 
-.equal:hover {
+.equals:hover {
   background-color: #ed9a00;
 }
 
-.equal:active {
+.equals:active {
   background-color: #d18800;
 }
 
