--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -45,10 +45,10 @@ body {
 	display: grid;
 	grid-template-areas:
 		'plus minus times divide'
-		'seven eight nine equal'
-		'four five six equal'
-		'one two three equal'
-		'zero clear clear equal';
+		'seven eight nine equals'
+		'four five six equals'
+		'one two three equals'
+		'zero clear clear equals';
 }
 
 .button {
@@ -60,11 +60,11 @@ body {
 	transition: background-color 0.1s linear;
 
 	&:hover {
-		background-color: #e4e4e4;
+		background-color: #e9e9e9;
 	}
 
 	&:active {
-		background-color: #c5c5c5;
+		background-color: #cacaca;
 	}
 
 	&:focus {
@@ -72,8 +72,8 @@ body {
 	}
 }
 
-.equal {
-	grid-area: equal;
+.equals {
+	grid-area: equals;
 	background-color: rgb(255, 171, 16);
 
 	&:hover {
