--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,10 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -26,11 +30,11 @@ body {
 }
 
 .calculator-container {
-  margin-top: -5%;
   -webkit-box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
           box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
   border-radius: 0.5rem;
   overflow: hidden;
+  margin-top: 2rem;
 }
 
 .calculator-display {
@@ -53,7 +57,7 @@ body {
   padding: 1rem 1.25rem;
   background-color: #fefefe;
   color: black;
-  border: 2px solid transparent;
+  border: 1px solid black;
   cursor: pointer;
   -webkit-transition: background-color 0.1s linear;
   transition: background-color 0.1s linear;
@@ -65,10 +69,6 @@ body {
 
 .button:active {
   background-color: #cacaca;
-}
-
-.button:focus {
-  border: 2px solid #232327;
 }
 
 .equals {
