--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,6 +7,7 @@
 
 body {
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
@@ -24,11 +25,11 @@ body {
 }
 
 .calculator-container {
-	margin-top: -5%;
 	box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
 		rgba(0, 0, 0, 0.22) 0px 10px 10px;
 	border-radius: 0.5rem;
 	overflow: hidden;
+	margin-top: 2rem;
 }
 
 .calculator-display {
@@ -55,7 +56,7 @@ body {
 	padding: 1rem 1.25rem;
 	background-color: #fefefe;
 	color: black;
-	border: 2px solid transparent;
+	border: 1px solid black;
 	cursor: pointer;
 	transition: background-color 0.1s linear;
 
@@ -67,9 +68,9 @@ body {
 		background-color: #cacaca;
 	}
 
-	&:focus {
-		border: 2px solid #232327;
-	}
+	// &:focus {
+	// 	border: 2px solid #232327;
+	// }
 }
 
 .equals {
