--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,11 +30,11 @@ body {
 }
 
 .calculator-container {
+  margin-top: -5%;
   -webkit-box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
           box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
   border-radius: 0.5rem;
   overflow: hidden;
-  margin-top: 2rem;
 }
 
 .calculator-display {
@@ -57,7 +57,7 @@ body {
   padding: 1rem 1.25rem;
   background-color: #fefefe;
   color: black;
-  border: 1px solid black;
+  border: 2px solid transparent;
   cursor: pointer;
   -webkit-transition: background-color 0.1s linear;
   transition: background-color 0.1s linear;
@@ -69,6 +69,10 @@ body {
 
 .button:active {
   background-color: #cacaca;
+}
+
+.button:focus {
+  border: 2px solid #232327;
 }
 
 .equals {
