changed bg color

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,7 +21,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   height: 100vh;
-  background: #fef3c7;
+  background: #fef6d7;
 }
 
 .calculator-container {
