--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -11,7 +11,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
-	background: #fef3c7;
+	background: hsl(48, 96, 92);
 }
 
 .calculator-container {
